<resources>
    <string name="app_name">ContactProject</string>
    <string name="addContact">+</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="annuler">Annuler</string>
    <string name="prenom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="telephone">Téléphone</string>
    <string name="prendre">Prendre une photo</string>
    <string name="selectionner">Selectionner une photo</string>
    <string name="this_is_the_profile_pic_of_the_contact">This is the profile pic of the contact</string>
    <string name="modifier">Modifier</string>
    <string name="default_num">06 00 00 00 00</string>
    <string name="appeler">Appeler</string>
    <string name="message">Message</string>
    <string name="informations">Informations</string>
    <string name="no_contact">Vous n\'avez pas de contacts :(</string>
    <string name="e_mail">E-mail</string>
    <string name="genre">Genre</string>
    <string name="date_de_naissance">date de naissance</string>
    <string name="ajouter_champ">Ajouter un champ</string>
    <string name="ajouter_date_de_naissance">Ajouter date de naissance</string>
    <string name="ajouter_sexe">ajouter sexe</string>
    <string name="homme">Homme</string>
    <string name="femme">Femme</string>
    <string name="autre">Autre</string>
    <string name="sexe">sexe</string>
    <string name="retour">Retour</string>
    <string name="arrow_retour"><![CDATA[< Retour]]></string>
    <string name="text">text</string>
    <string name="entrez_e_mail">Entrez e-mail</string>
    <string name="rechercher">Rechercher</string>
    <string name="ajouter_mail">ajouter mail</string>
    <string name="ok">ok</string>
    <string name="enter_email">Entrez e-mail</string>
    <string name="a">A</string>
</resources>