<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FAFCFC">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/base"
        >
        <include layout="@layout/gradient_tb"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayoutShowInfoContact"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/base"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <Button
            android:id="@+id/annulerShowContact"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:theme="@style/FlatButton"
            android:textColor="@color/appleBlue"
            android:textSize="17sp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"

            android:text="@string/annuler"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="10dp"
            />

        <View android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/enregistrerInfoContact"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:theme="@style/FlatButton"
            android:textColor="@color/appleBlue"
            android:textSize="17sp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"

            android:text="@string/enregistrer"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="10dp"
            />



    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutShowInfoContact"
        android:adjustViewBounds="true"
        android:id="@+id/imageProfilePic"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/this_is_the_profile_pic_of_the_contact"
        android:maxHeight="80dp"
        android:maxWidth="80dp"
        android:src="@drawable/default_profile_pic"
        />
    <EditText
        android:id="@+id/textViewPrenomContact"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:hint="@string/prenom"
        android:layout_height="wrap_content"
        android:text="@string/nom"

        app:layout_constraintTop_toBottomOf="@+id/imageProfilePic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:autofillHints="prenom"
        android:inputType="text"
        tools:ignore="LabelFor" />
    <EditText
        android:id="@+id/textViewNomContact"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_height="wrap_content"
        android:text="@string/nom"
        android:hint="@string/nom"
        app:layout_constraintTop_toBottomOf="@+id/textViewPrenomContact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:autofillHints="nom"
        android:inputType="text"
        tools:ignore="LabelFor"
        />
    <EditText
        android:id="@+id/textViewNumContact"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_height="wrap_content"
        android:text="@string/nom"
        android:hint="@string/telephone"
        app:layout_constraintTop_toBottomOf="@+id/textViewNomContact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:autofillHints="num"
        android:inputType="phone"
        tools:ignore="LabelFor"
        />
    <EditText
        android:id="@+id/textViewEmailContact"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:hint="@string/e_mail"
        android:layout_marginRight="10dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_height="wrap_content"
        android:text="@string/nom"
        app:layout_constraintTop_toBottomOf="@+id/textViewNumContact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:autofillHints="email"
        android:inputType="textEmailAddress"
        tools:ignore="LabelFor"
        />
    <Button
        android:id="@+id/button_sexe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmailContact"
        android:text="@string/sexe"

        />
    <TextView
        android:id="@+id/textViewDateContact"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingRight="10dp"
        android:hint="@string/date_de_naissance"
        android:paddingLeft="10dp"
        android:layout_height="wrap_content"
        android:text="@string/nom"
        app:layout_constraintTop_toBottomOf="@+id/button_sexe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="LabelFor,TextFields"
        />

</androidx.constraintlayout.widget.ConstraintLayout>