<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="#FAFCFC">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/base"
        >
        <include layout="@layout/gradient_tb"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutAddContact"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/base"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <Button
            android:id="@+id/annulerAddContact"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/annuler"
            android:theme="@style/FlatButton"
            android:textColor="@color/appleBlue"
            android:textSize="17sp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="10dp"
/>
        <View android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/imageProfilePic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/TextEditNum"
            android:src="@drawable/default_profile_pic"
            android:contentDescription="@string/this_is_the_profile_pic_of_the_contact"
            android:layout_weight="1" />

        <View android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/enregistrerAddContact"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/enregistrer"
            android:theme="@style/FlatButton"
            android:textColor="@color/appleBlue"
            android:textSize="17sp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"

            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="10dp"
            />


    </LinearLayout>

    <EditText
        android:id="@+id/TextEditPrenom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutAddContact"

        android:layout_marginTop="50dp"
        android:inputType="textPersonName"

        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/prenom"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        />
    <EditText
        android:id="@+id/TextEditNom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/TextEditPrenom"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/nom"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        />

    <EditText
        android:id="@+id/TextEditNum"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@+id/TextEditNom"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/telephone"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonAddChamp"
        android:layout_margin="10dp"
        android:text="@string/ajouter_champ"
        app:layout_constraintTop_toBottomOf="@+id/TextEditNum"
/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewAddChamp1"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/ajouter_champ"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddChamp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewAddChamp2"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/ajouter_champ"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddChamp1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewAddChamp3"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/ajouter_champ"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddChamp2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"/>




</androidx.constraintlayout.widget.ConstraintLayout>