<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="#FAFCFC">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/base"
        >
        <include layout="@layout/gradient_tb"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutShowContact"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/base"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <Button
            android:id="@+id/annulerShowContact"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/arrow_retour"
            android:theme="@style/FlatButton"
            android:textColor="@color/appleBlue"
            android:textSize="17sp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="10dp"
            />


        <View android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:theme="@style/FlatButton"
            android:textColor="@color/appleBlue"
            android:textSize="17sp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/buttonModifier"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/modifier"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="10dp"
            />


    </LinearLayout>

    <ImageView
        android:id="@+id/imageProfilePic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutShowContact"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/this_is_the_profile_pic_of_the_contact"
        android:minHeight="150dp"
        android:minWidth="150dp"
        android:maxHeight="150dp"
        android:maxWidth="150dp"
        android:src="@drawable/default_profile_pic"
        />

    <TextView
        android:id="@+id/textViewPrenomContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom"
        app:layout_constraintTop_toBottomOf="@+id/imageProfilePic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/textViewNomContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom"
        app:layout_constraintTop_toBottomOf="@+id/textViewPrenomContact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="7dp"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/textViewNumeroContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_num"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewNomContact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#3b475c"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <LinearLayout
        android:id="@+id/linearLayoutShowContactActions"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewNumeroContact"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <Button
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/buttonAppeler"
            android:paddingStart="25dp"
            android:drawableLeft="@drawable/baseline_call_24"
            android:text="@string/text"
            android:textSize="0sp"
            app:layout_constraintTop_toBottomOf="@+id/textViewNumeroContact"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"

            />


        <View android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:paddingStart="25dp"
            android:drawableLeft="@drawable/baseline_message_24"
            android:text="@string/text"
            android:textSize="0sp"
            android:id="@+id/buttonMessage"
            app:layout_constraintTop_toBottomOf="@+id/textViewNumeroContact"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"

            />
        <View android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:paddingStart="25dp"
            android:drawableLeft="@drawable/baseline_info_24"
            android:text="@string/text"
            android:textSize="0sp"
            android:id="@+id/buttonInfo"
            app:layout_constraintTop_toBottomOf="@+id/textViewNumeroContact"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"

            />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>